--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
 # Puerto del servidor
-PORT=4000
+PORT=10000
+
+# JWT para autenticación
+JWT_SECRET=super_clave_segura
 
 # Correo para enviar tickets
 EMAIL_USER=OHANA33@gmail.com
 EMAIL_PASS=OHANAADMIN
 
 # Twilio (para enviar SMS/WhatsApp)
-TWILIO_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_PHONE=+525545606473
+TWILIO_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxx
+SMS_FROM=+525545606473
+
