--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "knex": "^3.1.0",
-    "multer": "^2.0.2",
-    "nodemailer": "^7.0.10",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
-    "twilio": "^5.10.4"
-  }
+ "dependencies": {
+  "bcryptjs": "^2.4.3",
+  "cors": "^2.8.5",
+  "dotenv": "^16.4.5",
+  "express": "^4.21.2",
+  "jsonwebtoken": "^9.0.2",
+  "multer": "^1.4.5-lts.1",
+  "nodemailer": "^6.9.13",
+  "sqlite": "^5.1.1",
+  "sqlite3": "^5.1.7",
+  "twilio": "^4.23.0"
 }
+
+  }
+
